--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,14 @@
 {
   "name": "attendance-tracker-backend",
   "version": "1.0.0",
-  "description": "Backend API for Employee Attendance Tracker",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "install-deps": "npm install express cors mysql2 body-parser dotenv"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "mysql2": "^3.6.5",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "body-parser": "^1.20.2"
   }
 }
